--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,3 +3,7 @@ target = "x86_64-blog_os.json"
 
 [target.'cfg(target_os = "none")']
 runner = "bootimage runner"
+
+[unstable]
+build-std-features = ["compiler-builtins-mem"]
+build-std = ["core", "compiler_builtins"]
