--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ volatile = "0.2"
 spin = "0.5"
 x86_64 = "0.14"
 uart_16550 = "0.2"
+pic8259 = "0.10"
+pc-keyboard = "0.5"
 
 [dependencies.lazy_static]
 version = "1.4"
