--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,19 @@ authors = ["Howard Zhu <zhc_howard@hotmail.com>"]
 edition = "2018"
 
 [package.metadata.bootimage]
-test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
+test-args = [
+  "-device",
+  "isa-debug-exit,iobase=0xf4,iosize=0x04",
+  "-serial",
+  "stdio",
+  "-display",
+  "none",
+]
 test-success-exit-code = 33
-test-timeout = 60          # (in seconds)
+test-timeout = 60 # (in seconds)
 
 [dependencies]
-bootloader = "0.9"
+bootloader = { version = "0.9", features = ["map_physical_memory"] }
 volatile = "0.2"
 spin = "0.5"
 x86_64 = "0.14"
