--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ x86_64 = "0.14"
 uart_16550 = "0.2"
 pic8259 = "0.10"
 pc-keyboard = "0.5"
+linked_list_allocator = "0.9"
 
 [dependencies.lazy_static]
 version = "1.4"
